# parallel

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  openmp.cpp  pthread.cpp  sort.h
